=head1 ACKNOWLEDGEMENTS

Extra Thanks to:

Andreas Koenig <andreas.koenig@franz.ww.tu-berlin.de>
for *lots* of bug spotting, fixing and patching, 
Apache::Registry and CGI.pm overhaul efforts (aka CGI::XA &
CGI::Switch) 

Gisle Aas <aas@sn.no>
For getting this effort started and many contributions since 

Other contributors are mentioned below.

=head1 CHANGES

=over 3

=item 1.11_01-dev

fixed broken modules/eperl test spotted by Tom Mornini

fixed Makefile.PL bug spotted by Jon Drukman w/ PERL_CHILD_EXIT=1
in fact, PerlChildInitHandler/PerlHandlerExitHandler are always
enabled by default now with 1.3bx+

added experimental get_handlers/set_handlers methods 
(enable with PERL_GET_SET_HANDLERS=1)

new module Apache::PerlRun, splits out Apache::Registry functionality
and provides a `dirty-perl' handler (see pod).  thanks to Stas Bekman
for testing and suggestions.

PERL_OBJECT_HANDLERS now enabled #ifdef PERL_METHOD_HANDLERS

widen scope of mutex lock under win32 to avoid possible deadlock
[Gerald Richter <richter@ecos.de>]

fixed bug in directory_merge where FLAG directives would inherit `On'
from the base configuration, even if the directory explicitly had the
flag turned `Off', this was the case for PerlSendHeader and
PerlSetupEnv.  thanks to Mark-Jason Dominus for the spot.

added `grab' function to Apache::test, which fetches a url and gives
diagnostics as to validity of the HTTP response 
(a test for properly formatted headers!)

=item 1.11 - April 21, 1998

Apache::SIG enhancements for LogFormat [Doug Bagley <doug@dejanews.com>]

drop API_EXPORTs for mod_include #perl stuff which breaks under win32/1.3b6
spotted by Jeff Baker

Inclusion of $r->server->server_hostname if $r->server->is_virtual in
Apache::Registry script namespaces is back to On by default after
recently tripping up Ben Laurie, Janos Farkas, Tony Bowden.  To
disable (only gain is to conserve memory) in a startup file set:
 $Apache::Registry::NameWithVirtualHost = 0;
