@@ -16,11 +16,14 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
                  (well, close to it anyhow)
 ---------------------------------------------------------------------------
 
+- perl-status?mod_perl_hooks broken under win32?
+
 - swap calling order of .conf handlers and push_handlers?
 
 - documentation:
   + Ken Williams <ken@forum.swarthmore.edu>
     list archive  http://forum.swarthmore.edu/epigone/modperl
+  + modperl.opensrc.org
   + PerlRun::handler
   + Frank's FAQ update: http://www.ping.de/~fdc/mod_perl/mod_perl_faq.tar.gz
   + DONE
