@@ -8,16 +8,55 @@ sub xs_cmd_table {
     my $cmdtab = "";
 
     for my $cmd (@$cmds) {
+	my($name, $proto, $desc);
+
+	if(ref($cmd) eq "ARRAY") {
+	    ($name,$desc) = @$cmd;
+	}
+	else {
+	    $name = $cmd;
+	}
+	my $sub = join '::', $class, $name;
+	my $take = "TAKE123";
+	if(defined &$sub) {
+	    if($proto = prototype(\&{$sub})) {
+		#extra $ is for config data
+		$take = 
+		    $proto eq '$$$$' ? "TAKE3"   :
+	            $proto eq '$$$'  ? "TAKE2"   :
+	            $proto eq '$$'   ? "TAKE1"   :
+		    $proto eq '@'    ? "ITERATE" :
+                    $take;
+	    }
+	}
+	$desc ||= "1-3 value(s) for $name";
+
 	$cmdtab .= <<EOF;
 
-    { "$cmd", perl_cmd_perl_TAKE123,
-      (void*)"${class}::$cmd",
-      OR_ALL, TAKE123, "1-3 value(s) for $cmd" },
+    { "$name", perl_cmd_perl_$take,
+      (void*)"$sub",
+      OR_ALL, $take, "$desc" },
 EOF
     }
 
     return <<EOF;
 #include "modules/perl/mod_perl.h"
+
+static SV *DirSV;
+static void *create_dir_config_sv (pool *p, char *dirname)
+{
+    SV *sv = newSV(TRUE);
+    DirSV = sv;
+    return &DirSV;
+}
+
+static void stash_mod_pointer (char *class, void *ptr)
+{
+    SV *sv = newSV(0);
+    sv_setref_pv(sv, NULL, (void*)ptr);
+    hv_store(perl_get_hv("Apache::XS_ModuleConfig",TRUE), 
+	     class, strlen(class), sv, FALSE);
+}
 
 static command_rec mod_cmds[] = {
     $cmdtab
@@ -27,7 +66,7 @@ static command_rec mod_cmds[] = {
 module MODULE_VAR_EXPORT XS_${modname} = {
     STANDARD_MODULE_STUFF,
     NULL,               /* module initializer */
-    NULL,  /* per-directory config creator */
+    create_dir_config_sv,  /* per-directory config creator */
     NULL,   /* dir config merger */
     NULL,       /* server config creator */
     NULL,        /* server config merger */
@@ -50,7 +89,7 @@ MODULE = $class		PACKAGE = $class
 
 BOOT:
     add_module(&XS_${modname});
-
+    stash_mod_pointer("$class", &XS_${modname});
 EOF
 }
 
@@ -82,8 +121,7 @@ This example will generate a .xs file which declares an Apache C module
 for the I<My::Module> class.  It is used simply to allow Perl modules to
 add their own directives to Apache, rather than use B<PerlSetVar>.
 When the directive is encountered in a config file, a Perl subroutine of
-the same name in the I<My::Module> class is called and passed the arguments
-as perl C<TAKE123>.
+the same name in the I<My::Module> class is called with the given arguments.
 
 For an example, see t/TestDirectives in the mod_perl distribution.
 
