@@ -1,4 +1,6 @@
 use Apache::test;
 
 skip_test unless $net::callback_hooks{PERL_STACKED_HANDLERS};
-print fetch "http://$net::httpserver/chain/";
+die "can't open http://$net::httpserver/$net::perldir/stacked\n" 
+    unless simple_fetch "/stacked";
+print fetch "/chain/";
