@@ -18,6 +18,18 @@ Other contributors are mentioned below.
 
 =item 1.11_01-dev
 
+additions to experimental Perl directive support:
+-  per-directory config can be an arbitrary SV, returned by directive
+   handlers registered via Apache::ExtUtils->xs_cmd_table
+- $r->dir_config with no args now looks for per-directory config in
+  the caller's namespace
+-  xs_cmd_table now looks for a prototype to determine TAKE1,
+   TAKE2, TAKE3, etc.
+
+added $Apache::CurrentThreadId variable under win32
+
+added method/object handler tests to internal/stacked test
+
 fixed broken modules/eperl test spotted by Tom Mornini
 
 fixed Makefile.PL bug spotted by Jon Drukman w/ PERL_CHILD_EXIT=1
